<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MoonFragment"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/ganymede" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wschod"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/wschod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:hint="JUTRO"
                android:layout_weight="1"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zahod"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/zachod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:hint="JUTRO"
                android:layout_weight="1"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phase"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/faza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:hint="JUTRO"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:layout_weight="1"/>
        </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullMoon"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/pelnia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:hint="JUTRO"
            android:textColorHighlight="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:maxLength="20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dayOfSynodicMonth"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/synod"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textColorHint="@android:color/white"
            android:hint="JUTRO"
            android:textColorHighlight="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:maxLength="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/theClosestFullMoon"
            android:textColor="#ffffff"
            android:layout_gravity="left"
            android:paddingRight="40dp"
            android:textSize="@dimen/size_text_sun"
            />

        <TextView
            android:id="@+id/now"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="22:00"
            android:textColor="@android:color/white"
            android:textColorHint="#ffffff"
            android:textSize="@dimen/size_text_sun"
            android:layout_gravity="right"
            android:maxLength="20"
            />

    </LinearLayout>

</LinearLayout>
